force-app/main/default/objects/AI_Config__c/AI_Config__c.object-meta.xml
<CustomObject>
    <label>AI Config</label>
    <pluralLabel>AI Config</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Setting Name</label>
    </nameField>
    <customSettingsType>Hierarchy</customSettingsType>
</CustomObject>