force-app/main/default/objects/AI_Config__c/fields/Circuit_Breaker_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Breaker_Threshold__c</fullName>
    <label>Circuit_Breaker_Threshold_</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>0</scale>
</CustomField>