force-app/main/default/objects/AI_Config__c/fields/Default_Rate_Limit__c.field-meta.xml
<CustomField>
    <fullName>Default_Rate_Limit__c</fullName>
    <label>Default_Rate_Limit_</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>0</scale>
</CustomField>