force-app/main/default/objects/AI_Config__c/fields/Default_Window_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Default_Window_Seconds__c</fullName>
    <label>Default_Window_Seconds_</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>0</scale>
</CustomField>