force-app/main/default/objects/AI_Config__c/fields/Enable_AI_Processing__c.field-meta.xml
<CustomField>
    <fullName>Enable_AI_Processing__c</fullName>
    <label>Enable_AI_Processing_</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>