force-app/main/default/objects/AI_Config__c/fields/Enable_Rate_Limiting__c.field-meta.xml
<CustomField>
    <fullName>Enable_Rate_Limiting__c</fullName>
    <label>Enable_Rate_Limiting_</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>