force-app/main/default/objects/AI_Config__c/fields/Enable_Webhook_Support__c.field-meta.xml
<CustomField>
    <fullName>Enable_Webhook_Support__c</fullName>
    <label>Enable_Webhook_Support_</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>