force-app/main/default/objects/AI_Config__c/fields/Max_Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry_Attempts__c</fullName>
    <label>Max_Retry_Attempts_</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>0</scale>
</CustomField>